# FP_Lab3

./: .gitignore  README.MD  dune-project  test.csv
.github/workflows/: ocaml.yml
lib/: approx.ml  dune
test/: approx.ml  dune
