(lang dune 3.5)

(name approx)

(generate_opam_files true)

(source
 (github Handiesto/approx))

(authors "Plyasov K. E.")

(maintainers "Plyasob K. E.")

(license LICENSE)

(documentation https://github.com/TimeToStop/approx)

(package
 (name approx)
 (synopsis "Lab3")
 (description "Approximation")
 (depends ocaml dune))
; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
